# NPL-G4

./: .OpParameters.conf.swo  .exampleB1.cc.swp  .gitignore  CMakeLists.txt  G4sim.cc  OpParameters.conf  Opsim.cc  Parameters.conf  README.md  exampleB1.cc  run1.mac  vis.mac
Opsim/: OpParameters.conf  Opsim.cc
Opsim/analysis/: Eff_SiPM.csv  OpDraw.C  OpMake.C  OpTemp.C
Opsim/analysis/src/: My_ana.C
Opsim/include/: OpEventAction.hh  OpParameterContainer.hh  OpRunAction.hh  OpSteppingAction.hh
Opsim/src/: OpActionInitialization.cc  OpDetectorConstruction.cc  OpEventAction.cc  OpMaterials.cc  OpParameterContainer.cc  OpRunAction.cc  OpSD.cc  OpSiPMHit.cc  OpSiPMSD.cc  OpSteppingAction.cc
analysis/: ABS.root  Birk.C  DrawHIMAC.C  EffDraw.C  H_Op_out_boundary.root  MP.txt  MPPCEff.csv  MakeHIMAC.C  OpAbs.C  OpBoundary.C  OpBoundaryDraw.C  OpDraw.C  OpMake.C  OpSpectra.C  OpTimeResDraw.C  Resolution_data.txt  SY_PT_Draw.C  SiPMEff.csv  data_birks.txt  nonOpDraw.C  nonOpMake.C  out_MP.txt  temp.C
analysis/data/: out_proton_100MeV.root  out_proton_100MeV_KOMACBeam.root  out_proton_100MeV_frame.root
analysis/npl/: Draw.C  H_Op_LY_TimeRes_1000MeV.root  H_Op_LY_TimeRes_100MeV.root  H_Op_LY_TimeRes_200MeV.root  H_Op_LY_TimeRes_300MeV.root  H_Op_LY_TimeRes_400MeV.root  H_Op_LY_TimeRes_500MeV.root  H_Op_LY_TimeRes_600MeV.root  H_Op_LY_TimeRes_700MeV.root  H_Op_LY_TimeRes_800MeV.root  H_Op_LY_TimeRes_900MeV.root  H_Op_LY_TimeRes_SY100.root  H_Op_LY_TimeRes_SY1000.root  H_Op_LY_TimeRes_SY200.root  H_Op_LY_TimeRes_SY300.root  H_Op_LY_TimeRes_SY400.root  H_Op_LY_TimeRes_SY500.root  H_Op_LY_TimeRes_SY600.root  H_Op_LY_TimeRes_SY700.root  H_Op_LY_TimeRes_SY800.root  H_Op_LY_TimeRes_SY900.root
analysis/old_ana/: BirkDraw.C  CalcWavToEnergy.C  DrawHIMAC.C  OpYield.C  temp.C
analysis/src/: My_ana.h  NOpdist.h
backup/: OpMaterials.hh
include/: ActionInitialization.hh  B1ActionInitialization.hh  B1PrimaryGeneratorAction.hh  B1RunAction.hh  CMakeCache.txt  DetectorConstruction.hh  EventAction.hh  OpActionInitialization.hh  OpDetectorConstruction.hh  OpEventAction.hh  OpHit.hh  OpMaterials.hh  OpParameterContainer.hh  OpPrimaryGeneratorAction.hh  OpRunAction.hh  OpSCHit.hh  OpSCSD.hh  OpSD.hh  OpSiPMHit.hh  OpSiPMSD.hh  OpSteppingAction.hh  OpTrackingAction.hh  ParameterContainer.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh
include/temp_storage/: OpHit.hh  OpSD.hh
src/: .B1ActionInitialization.cc.swp  ActionInitialization.cc  B1ActionInitialization.cc  B1PrimaryGeneratorAction.cc  B1RunAction.cc  DetectorConstruction.cc  EventAction.cc  OpActionInitialization.cc  OpDetectorConstruction.cc  OpEventAction.cc  OpHit.cc  OpMaterials.cc  OpParameterContainer.cc  OpPrimaryGeneratorAction.cc  OpRunAction.cc  OpSCHit.cc  OpSCSD.cc  OpSD.cc  OpSiPMSD.cc  OpSteppingAction.cc  OpTrackingAction.cc  ParameterContainer.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackingAction.cc
src/temp_storage/: OpHit.cc  OpSD.cc
(+16 files in other folders)
